# src/common/services/openapi/v1/models/ServiceDependency.ts
@@ -3,6 +3,6 @@
 /* eslint-disable */
 
 export type ServiceDependency = {
-    serviceId?: string;
+    key?: string;
     required?: boolean;
 }
